@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-15T00:58:35Z",
-  "count_outdated" : 121,
-  "uniques_outdated" : 103,
+  "timestamp" : "2025-11-20T00:58:43Z",
+  "count_outdated" : 122,
+  "uniques_outdated" : 104,
   "count" : 123,
   "uniques" : 105,
   "clones" : [
-    {
-      "timestamp": "2025-11-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-14T00:00:00Z",
       "count": 1,
