@@ -1,3 +1,12 @@
+2025-11-20T00:58:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19521592215 # 814
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-20
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 103 121 / 105 123
+* notice: next accum: outdated-unq outdated-all / unq all: 104 122 / 105 123
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-11-05] / []
+
 2025-11-15T00:58:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-builds/actions/actions/runs/19381829283 # 809
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-builds--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
